Fix overflow content

--- a/assets/css/components/_inputs.scss
+++ b/assets/css/components/_inputs.scss
@@ -48,6 +48,7 @@ input[type=button] {
     border-radius: 2rem;
     padding: .5rem 2rem;
     font-size: 1.5rem;
+    max-width: 100%;
     cursor: pointer;
 
     &:hover {
